--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="20sp"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -46,15 +47,30 @@
             android:hint="@string/Enter"
             android:inputType="textPassword" />
 
-        <Button
-            android:id="@+id/btnEnter"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20sp"
-            android:layout_marginLeft="20sp"
-            android:layout_marginTop="20sp"
-            android:layout_marginEnd="20sp"
-            android:layout_marginRight="20sp"
-            android:text="@string/Enter" />
+            android:layout_height="103dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnEnter"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20sp"
+                android:layout_marginLeft="20sp"
+                android:layout_marginTop="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginRight="20sp"
+                android:layout_weight="1"
+                android:text="@string/Enter" />
+
+            <Button
+                android:id="@+id/signUp"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_margin="20sp"
+                android:layout_weight="1"
+                android:text="@string/signup" />
+        </LinearLayout>
+
     </LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
