--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -29,7 +29,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btnAddDriver"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20sp"
@@ -39,7 +39,7 @@
                 android:text="Add Driver Detail" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btnLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20sp"
@@ -48,7 +48,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/btnDriverNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="40sp"
